# gnome-logs

./: meson.build  meson_options.txt
data/: gl-categorylist.ui  gl-eventtoolbar.ui  meson.build  org.gnome.Logs.service.in
help/: meson.build
src/: gl-categorylist.c  gl-categorylist.h  gl-eventtoolbar.c  gl-eventtoolbar.h  gl-eventview.c  gl-eventview.h  gl-eventviewlist.c  gl-eventviewlist.h  gl-journal-model.c  gl-journal-model.h  gl-journal.c  gl-journal.h  gl-window.c
tests/: meson.build
